Fix task headers not wrapping by using word-wrap: break-word; Add basic note styling to indicate the note will be deleted

--- a/src/components/Task/task.css
+++ b/src/components/Task/task.css
@@ -26,6 +26,7 @@
   margin: 0;
   font-size: 1.7rem;
   width: 100%;
+  word-wrap: break-word;
 }
 
 .Task-header__delete-button-container {
