--- a/src/components/TaskNotes/TaskNotes.css
+++ b/src/components/TaskNotes/TaskNotes.css
@@ -10,3 +10,8 @@
   font-size: 1.2rem;
   margin-bottom: 0.2rem;
 }
+
+.TaskNotes__note:hover {
+  cursor: pointer;
+  background-color: hsl(0, 75%, 75%);
+}
